i was add dit a new section.the section name is run

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <h1 class="h1">
                                 Get body in <br>  <span>shape</span> & stay <br>  healthy
                             </h1>
-                            <p class="p1"> Join us today and start your journey to a healthier, happier you. With personalized training plans, expert guidance, and a supportive community, your fitness transformation is just a click away!</p>
+                            <p class="p1"> we believe that a balanced and active lifestyle is the cornerstone of overall well-being. Whether you're just starting your fitness journey or looking to elevate your current routine, our comprehensive resources are designed to support you every step of the way</p>
                             <div class="heroBtn">
                                 <button class="btn">Join Club Now!</button>
                                 <button class="btnTrans">Download App</button>
@@ -72,22 +72,36 @@
                     <div class="singleHabitBox">
                         <img src="./images/image 2.png" alt="">
                         <h6>Movement</h6>
-                        <p class="p2">We believe fitness should be <br> accessible to everyone</p>
+                        <p class="p2">Movement is a fundamental aspect of human life.</p>
                     </div>
                     <div class="singleHabitBox">
                         <img src="./images/image 3.png" alt="">
                         <h6>Time</h6>
-                        <p class="p2">We believe fitness should be <br> accessible to everyone</p>
+                        <p class="p2">The timing of your workouts can impact your performance and results.</p>
                     </div>
                     <div class="singleHabitBox">
                         <img src="./images/image 4.png" alt="">
                         <h6>Practice</h6>
-                        <p class="p2">We believe fitness should be <br> accessible to everyone</p>
+                        <p class="p2">When it comes to fitness, practice is more than just a routine</p>
                     </div>
                     <div class="singleHabitBox">
                         <img src="./images/image 5.png" alt="">
                         <h6>Weight Loss</h6>
-                        <p class="p2">We believe fitness should be <br> accessible to everyone</p>
+                        <p class="p2">Weight loss is achieved through creating a calorie deficit. </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="run">
+            <div class="content py">
+                <div class="runWrap">
+                    <div class="runCont">
+                        <h2 class="h2">Run an Extra Mile Easily</h2>
+                        <p class="p2">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                        <button class="btn">Join Now</button>
+                    </div>
+                    <div class="runImg">
+                        <img src="./images/run.jpg" alt="">
                     </div>
                 </div>
             </div>
