--- a/index.html
+++ b/index.html
@@ -106,6 +106,105 @@
                 </div>
             </div>
         </section>
+        <section id="training">
+            <div class="content py">
+                <div class="title">
+                    <h2 class="h2">Trainings and Exercises</h2>
+                    <p class="p2">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                </div>
+                <div class="row mt">
+                    <div class="col1">
+                        <img src="./images/exercise1.jpg" alt="">
+                        <div ><h5>Lorem Ipsum</h5></div>
+                    </div>
+                    <div class="col2">
+                        <img src="./images/exercise2.png" alt=""> 
+                          <div><h5>Lorem Ipsum</h5></div>
+                    </div>
+                    <div class="col3">
+                        <img src="./images/exercise3.png" alt="">
+                        <div><h5>Leg Press: Works the quadriceps and glutes</h5></div>
+                    </div>
+                </div>
+                <div class="row2">
+                    <div class="col1">
+                        <img src="./images/exercise4.png" alt="">
+                        <div ><h5>Leg Press: Works the quadriceps and glutes</h5></div>
+                    </div>
+                    <div class="col2">
+                        <img src="./images/exercise5.jpg" alt=""> 
+                          <div><h5>Leg Press: Works the quadriceps and glutes</h5></div>
+                    </div>
+                    <div class="col3">
+                        <img src="./images/exercise6.jpg" alt="">
+                        <div><h5>Leg Press: Works the quadriceps and glutes</h5></div>
+                    </div>
+                </div>
+                <div class="title trainTitle">
+                    <h2 class="h2">BMI Calculator</h2>
+                    <p class="p2">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                </div>
+            </div>
+        </section>
+        <section id="calculate">
+            <div class="content py">
+                <div class="calcWrap">
+                    <div class="LboxClac">
+                        <h3>BMI Calculator Chart</h3>
+                        <table class="table" border="1">
+                            <tr>
+                                <th>BMI</th>
+                                <th>Weight Status</th>
+                            </tr>
+                            <tr>
+                                <td>Below 18.5</td>
+                                <td>Underweight</td>
+                            </tr>
+                            <tr>
+                                <td>18.5 - 24.9</td>
+                                <td>Healthy</td>
+                            </tr>
+                            <tr>
+                                <td>25.0 - 29.9</td>
+                                <td>Overweight</td>
+                            </tr>
+                            <tr>
+                                <td>30.0 - and Above</td>
+                                <td>Obese</td>
+                            </tr>
+                        </table>
+                    </div>
+                <div class="rBoxClack">
+                    <div>
+                        <h3>Calculate your BMI</h3>
+                        <p class="p2">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
+                    </div>
+                    <form class="calcForm">
+                        <div>
+                            <input type="text" placeholder="Height/cm">
+                            <input type="text" placeholder="Weight/kg">
+                        </div>
+                        <div>
+                            <input type="text" placeholder="Age">
+                            <select>
+                                <option value="Sex">Sex</option>
+                                <option value="Male">Male</option>
+                                <option value="Female">Female</option>
+                            </select>
+                        </div>
+                        <div class="">
+                            <select>
+                                <option value="option1">option1</option>
+                                <option value="option2">option2</option>
+                                <option value="option3">option3</option>
+                            </select>
+                        </div>
+                    </form>
+                </div>
+     
+                </div>
+            </div>
+        </section>
     </main>
 
   </body>
