assignment copy fully done

--- a/index.html
+++ b/index.html
@@ -205,7 +205,101 @@
                 </div>
             </div>
         </section>
-    </main>
+        <section id="team">
+            <div class="content py">
+                <div class="title">
+                    <h2>Meet Our Team</h2>
+                    <p class="p1">We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
+                </div>
+                <div class="teamWrap mt">
+                    <div>
+                        <img src="./images/trainer1.png" alt="">
+                        <div class="opacity"></div>
+                        <div class="teamInfo">
+                  
+                            <h6>Jerome Bell</h6>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="./images/trainer2.png" alt="">
+                        <div class="opacity"></div>
+                        <div class="teamInfo">
+                            <h6>Cameron Williamson</h6>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="./images/trainer3.png" alt="">
+                        <div class="opacity"></div>
+                        <div class="teamInfo">
+                            <h6>Darrell Steward</h6>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="./images/trainer4.png" alt="">
+                        <div class="opacity"></div>
+                        <div class="teamInfo">
+                            <h6>Dianne Russell</h6>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="./images/trainer5.png" alt="">
+                        <div class="opacity"></div>
+                        <div class="teamInfo">
+                            <h6>Cody Fisher</h6>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="./images/trainer6.png" alt="">
+                        <div class="opacity"></div>
+                        <div class="teamInfo">
+                            <h6>Theresa Webb</h6>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
 
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="content bb py">
+            <div class="footerWtrap">
+                <div class="footerDesc">
+                    <div class="logo fLogo">Fitness</div>
+                    <p class="p2">We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
+                </div> 
+                <div>
+                    <h3>Get Started</h3>
+                    <ul>
+                        <li><a href="">Service</a></li>
+                        <li><a href="">Contact Us</a></li>
+                        <li><a href="">Affiliate Program</a></li>
+                        <li>
+                            <a href="">About Us</a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>Get Started</h3>
+                    <ul>
+                        <li><a href="">Fitness</a></li>
+                        <li><a href="">Platform Us</a></li>
+                        <li><a href="">Workout Libary</a></li>
+                        <li>
+                            <a href="">App Design</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <p>
+            All right reserved @Fitness 2024
+        </p>
+    </footer>
   </body>
 </html>
